refactor: cambiar metodo para encontrar todos los equipos independientemente de la competencia